changes in frontend

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,10 @@
 {% extends "layout.html" %}
-{% block title %}Index{% endblock %}
-{% block head %}
-{{ super() }}
-<style type="text/css">
-    .important {
-        color: #336699;
-    }
-</style>
-{% endblock %}
+{% block title %}Model Testing{% endblock %}
+
 {% block content %}
 <div class="flex flex-col min-h-screen items-center justify-center">
     <h1 class="text-5xl font-bold">Model Testing</h1>
-    <h2 class="text-xl">
+    <h2 class="text-xl mb-4">
         Enhancing Home Security: An Analysis of User - Centered Design in AI Surveillance Systems
     </h2>
     <body>
